clusters/talos-robbinsdale/apps/media/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector:
    app: lidarr
  ports:
  - name: http
    port: 8686
    protocol: TCP
    targetPort: 8989
  type: ClusterIP
