clusters/talos-robbinsdale/apps/media/lidarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr
  namespace: media
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: robbinsdale
      namespace: envoy-gateway-system
  hostnames:
    - "lidarr.rajsingh.info"
    - "lidarr.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: lidarr
          port: 8686
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
